src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_mult_udim2.snap
---
source: src/math_ops/float32.rs
expression: "10.0f32.mult(&UDim2::new(UDim::new(10.0, 32), UDim::new(10.0, 32)).into())"
---
UDim2:
  - - 100
    - 320
  - - 100
    - 320
