src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_pow_color3.snap
---
source: src/math_ops/float32.rs
expression: "5.0f32.pow(&Color3::new(1.0, 0.5, 0.2).into())"
---
Color3:
  - 5
  - 2.236068
  - 1.3797296
