src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_pow_udim.snap
---
source: src/math_ops/float32.rs
expression: "5.0f32.pow(&UDim::new(10.0, 32).into())"
---
UDim:
  - 9765625
  - 2147483647
