src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_pow_udim2.snap
---
source: src/math_ops/float32.rs
expression: "5.0f32.pow(&UDim2::new(UDim::new(2.0, 32), UDim::new(10.0, 32)).into())"
---
UDim2:
  - - 25
    - 2147483647
  - - 9765625
    - 2147483647
