src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_pow_vector2int16.snap
---
source: src/math_ops/float32.rs
expression: "5.0f32.pow(&Vector2int16::new(5, 15).into())"
---
Vector2int16:
  - 3125
  - 32767
