src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_pow_vector3.snap
---
source: src/math_ops/float32.rs
expression: "5.0f32.pow(&Vector3::new(5.0, 10.0, 15.0).into())"
---
Vector3:
  - 3125
  - 9765625
  - 30517578000
